@@ -1,3 +1,10 @@
+2002-05-20  Kenneth Kocienda  <kocienda@apple.com>
+
+        Changed assertion failure code to send a SIGQUIT instead
+        of raising an NSException.
+
+	* Misc.subproj/WebKitDebug.h
+
 2002-05-20  Chris Blumenberg  <cblu@apple.com>
 
 	A whole lot of plug-in clean-up.
